--- a/style.css
+++ b/style.css
@@ -18,13 +18,19 @@
     --white: #FFFFFF;
 }
 
+/*GERAL*/
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-ul {
+img {
+    max-width: 100%;
+    display: block;
+}
+h1, ul,p {
     margin: 0;
     padding: 0 ;
 }
@@ -32,6 +38,7 @@ ul {
 a, ul, li {
     text-decoration: none;
     list-style: none;
+    color: inherit;
 }
 
 .title a{
@@ -90,7 +97,7 @@ a, ul, li {
     transition: 0.3s;
 }
 
-
+/*MEDIA QUERIES*/
 @media (max-width: 800px) {
     .header-menu {
         gap: 20px;
@@ -124,3 +131,59 @@ a, ul, li {
     }
 }
 
+/*INTRO*/
+
+.intro-bg {
+    background: var(--blue_1);
+    color: var(--white);
+}
+
+.intro {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0px 40px;
+    max-width: 1200px;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.intro-content {
+    align-self: end;
+    padding-bottom: 80px;
+}
+
+.intro h1 {
+    margin-bottom: 32px;
+    font-size: 64px;
+    line-height: 1.125;
+}
+
+.intro h1 span {
+    color: #957C3D;
+}
+
+.intro p {
+    margin-bottom: 20px;
+    font-size: 24px;
+    line-height: 1.5;
+    color: var(--blue_7);
+}
+
+.intro a {
+    padding: 16px 32px;
+    background: linear-gradient(var(--blue_5) , var(--blue_7));
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+    color: var(--blue_1);
+    font-size: 18px;
+    line-height: 1.33;
+    font-weight: bold;
+}
+
+.intro a:hover {
+    background: linear-gradient(var(--blue_2) , var(--blue_4));
+}
