commiting the last part of homepage

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,7 @@
 @import './home/intro.css';
 /*COMPONENTES*/
 @import './utilities/components.css';
+/*LAPTOPLIST*/
+@import './laptop/laptopList.css';
+/*TECH*/
+@import './home/tech.css';
