--- a/css/global/global.css
+++ b/css/global/global.css
@@ -13,8 +13,14 @@ body {
 img {
     max-width: 100%;
     display: block;
+
 }
-h1, ul,p {
+
+img[src$=".jpg"] {
+    border-radius: 4px;
+}
+
+h1, h2, h3, h4, h4, h6, ul, p {
     margin: 0;
     padding: 0 ;
 }
@@ -24,3 +30,4 @@ a, ul, li {
     list-style: none;
     color: inherit;
 }
+
