--- a/css/global/header.css
+++ b/css/global/header.css
@@ -9,15 +9,13 @@
 
 .header {
     display: flex;
-    box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
     flex-wrap: wrap;
     gap: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .header-menu {
