--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -18,6 +18,25 @@
     display: inline-block;
 }
 
+.link {
+    display: inline-block;
+    color: var(--blue_3);
+    font: 500 1.5rem/1.5 var(--font_poppins);
+    text-transform: uppercase
+}
+
+.link:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+}
+
+.link:hover {
+    color: var(--white);
+}
+
 @media (max-width: 600px) {
     .button {
         padding: 12px 16px;
