--- a/css/global/global.css
+++ b/css/global/global.css
@@ -6,10 +6,6 @@
     box-sizing: border-box;
 }
 
-body {
-    padding-bottom: 600px;
-}
-
 img {
     max-width: 100%;
     display: block;
@@ -20,7 +16,15 @@ img[src$=".jpg"] {
     border-radius: 4px;
 }
 
-h1, h2, h3, h4, h4, h6, ul, p {
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6, 
+ul, 
+p, 
+blockquote {
     margin: 0;
     padding: 0 ;
 }
