--- a/css/home/partners.css
+++ b/css/home/partners.css
@@ -44,6 +44,10 @@
     .partners ul {
         grid-template-columns: repeat(2, 1fr);
     }
+    .partners li {
+        display: flex;
+        padding: 20px;
+    }
     .partners li:nth-child(n + 3) {
         border-top: 2px solid var(--blue_3);
     }
