--- a/css/utilities/colors.css
+++ b/css/utilities/colors.css
@@ -1,4 +1,5 @@
 :root {
+    --blue_max: #02070d;
     --blue_1: #000d1b;
     --blue_2: #012954;
     --blue_3: #004793;
@@ -12,7 +13,22 @@
     --gold_4: #4F4220;
     --gold_5: #362C15;
     --white: #FFFFFF;
+    --silver: #C0C0C0;
+    --realgold: #FFD700;
 }
+
+/*REALGOLD*/
+
+.c-r-g {
+    color: var(--realgold);
+}
+
+/*SILVER*/
+
+.c-s {
+    color: var(--silver);
+}
+
 /*BLUE*/
 
 .c-b-1 {
@@ -65,6 +81,14 @@
 
 .bg_c-2 {
     background: #00152c;
+}
+
+.bg_cs {
+    background-color: var(--silver);
+}
+
+.bg_rg {
+    background-color: var(--realgold);
 }
 
 /*COLOR P*/
