--- a/css/utilities/typography.css
+++ b/css/utilities/typography.css
@@ -2,7 +2,7 @@
 :root {
     --font_poppins: "Poppins", sans-serif;
     --font_roboto: "Roboto", sans-serif;
-    --font-merriwheather: "Merriwheather", sans-serif;
+    --font-merriweather: "Merriweather", sans-serif;
 }
 
 .font-1 {
