--- a/css/laptop/laptops.css
+++ b/css/laptop/laptops.css
@@ -74,11 +74,18 @@
     margin-right: 8px;
 }
 
-.laptops-content a::after {
-    content: "→";
-    display: inline;
-    margin: 0 auto;
-    padding-left: 8px;
+.button.arrow::after {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 10px;
+    margin-left: 12px;
+    background: url("../../img/icones/seta.svg");
+    transition: transform 0.2s;
+}
+
+.button.arrow:hover::after {
+    transform: translateX(4px);
 }
 
 @media (max-width: 800px) {
