--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -17,6 +17,7 @@
     font: 600 1.125rem/1.35 var(--font_poppins);
     display: inline-block;
     max-width: max-content;
+    border: none;
 }
 
 .button.secondary:hover {
