--- a/css/contact/store.css
+++ b/css/contact/store.css
@@ -17,4 +17,50 @@
 
 .store-item {
     border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.14);
+}
+
+.store-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px 16px;
+    padding: 32px;
+}
+
+.store-content h3,
+.store-time {
+    grid-column: 1/-1;
+}
+
+.store-data {
+    display: grid;
+    gap: 8px;
+    border-left: 2px solid lightgray;
+    padding-left: 12px;
+}
+
+.store-time {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+@media (max-width: 800px) {
+    .store {
+        gap: 20px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .store h2 {
+        margin-bottom: 32px;
+    }
+    .store-content {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 600px) {
+    .store {
+        grid-template-columns: 1fr;
+    }
 }
