commiting budget page

--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,6 @@
 /*CONTACTS*/
     @import '../css/contact/contact.css';
     @import './contact/store.css';
+
+/*BUDGET*/
+    @import './budget/budget.css';
