--- a/css/budget/budget.css
+++ b/css/budget/budget.css
@@ -1,3 +1,29 @@
 #budget {
     background: linear-gradient(var(--blue_1) 600px, var(--white) 500px);
 }
+
+.budget {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.budget h2 {
+    text-transform: uppercase;
+    position: relative;
+}
+
+.budget h2:before {
+    content: "";
+    display: inline-block;
+    width: 4px;
+    height: 8px;
+    background-color: var(--realgold);
+    position: absolute;
+    left: -12px;
+}
+
+.budget-product, 
+.budget-data {
+    padding: 60px;
+    box-shadow: 0 1px 2px rgbb(0, 0, 0, 0.1);
+}
