--- a/css/budget/budget.css
+++ b/css/budget/budget.css
@@ -27,3 +27,74 @@
     padding: 60px;
     box-shadow: 0 1px 2px rgbb(0, 0, 0, 0.1);
 }
+
+.budget-product {
+    border-radius: 5px 0 0 5px;
+    background: var(--blue_max);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    align-content: start;
+}
+
+.budget-product label {
+    font: 400 1rem/1.5 "Poppins", sans-serif;
+    background-color: var(--blue_3);
+    display: grid;
+    padding: 12px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
+}
+
+.budget-product input:checked + label {
+    background: var(--blue_6);
+    color: var(--blue_1);
+}
+
+.budget-product input {
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.budget-product label::before {
+    content: "";
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border: 1px solid var(--blue_1);
+    box-sizing: border-box;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.budget-product input:checked + label::before {
+    border: var(--blue_3);
+    box-shadow: inset 0 0 0 3px var(--blue_1), inset 0 0 0 6px var(--blue_2);
+}
+
+.budget-product label span {
+    
+}
+
+.budget-product > * {
+    grid-column: 1/-1;
+}
+
+.budget-product > label {
+    grid-column: initial;
+}
+
+.budget-data {
+    border-radius: 0 5px 5px 0;
+    background: var(--white);
+}
+
+
+#luxnote:checked ~ #budget-laptop,
+#insurance:checked ~ #budget-insurance {
+    display: block;
+}
+
