--- a/css/budget/budget.css
+++ b/css/budget/budget.css
@@ -46,6 +46,7 @@
     cursor: pointer;
     grid-template-columns: auto 1fr auto;
     align-items: center;
+    border: 1px solid var(--blue_2);
 }
 
 .budget-product input:checked + label {
@@ -75,8 +76,21 @@
     box-shadow: inset 0 0 0 3px var(--blue_1), inset 0 0 0 6px var(--blue_2);
 }
 
+.budget-product label:hover {
+    background-color: var(--blue_5);
+}
+
+.budget-product input:focus + label {
+    box-shadow: 0 0 0 2px var(--blue_7);
+    border: 1px solid var(--blue_2);
+}
+
 .budget-product label span {
-    
+    display: none;
+}
+
+.budget-product input:checked +  label span {
+    display: inline-block;
 }
 
 .budget-product > * {
@@ -87,14 +101,22 @@
     grid-column: initial;
 }
 
+.budget-content {
+    display: none;
+}
+
 .budget-data {
     border-radius: 0 5px 5px 0;
     background: var(--white);
 }
 
+.budget-content h2, 
+.budget-content h2:nth-last-of-type(n + 2) {
+    margin-top: 20px;
+}
 
 #luxnote:checked ~ #budget-laptop,
 #insurance:checked ~ #budget-insurance {
-    display: block;
+    display: grid;
+    gap: 20px;
 }
-
