commiting js changes

--- a/css/global/header.css
+++ b/css/global/header.css
@@ -40,11 +40,13 @@
     background: var(--white);
     margin-top: 4px;
     position: absolute;
+    transition: 0.3s;
 }
 
-.header-menu a:hover:after {
+.header-menu a:hover:after,
+.header-menu a.active::after {
     width: 100%;
-    transition: 0.3s;
+
 }
 
 /*MEDIA QUERIES*/
